# opentelemetry-rust

./: .clomonitor.yml  .cspell.json  .gitignore  .gitmodules  .travis.yml  AGENTS.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE.txt  README.md  RELEASING.md  VERSIONING.md  build.rs  codecov.yml  deny.toml  entrypoint.sh  env.sh  precommit.sh  tracing-stable.md
batch-span-processor-hang-repro/: Cargo.toml  README.md
batch-span-processor-hang-repro/src/: main.rs
examples/actix-http-tracing/: Cargo.toml  README.md
opentelemetry/: CHANGELOG.md  Cargo.toml  README.md  allowed-external-types.toml
opentelemetry-api/: CHANGELOG.md  Cargo.toml  README.md
opentelemetry-api/src/: baggage.rs  common.rs  context.rs  lib.rs
opentelemetry-appender-log/: CHANGELOG.md  Cargo.toml  README.md
opentelemetry-appender-log/examples/: logs-basic-in-memory.rs  logs-basic.rs
opentelemetry-appender-log/src/: lib.rs
opentelemetry-appender-tracing/: CHANGELOG.md  Cargo.toml  README.md
opentelemetry-appender-tracing/benches/: log-attributes.rs  logs.rs  span-attributes.rs
opentelemetry-appender-tracing/examples/: basic-appender-tracing.rs  basic.rs
opentelemetry-appender-tracing/src/: layer.rs  lib.rs
opentelemetry-appender-tracing/tests/: test_no_stack_overflow_after_shutdown.rs
opentelemetry-aws/: CHANGELOG.md  Cargo.toml  README.md
opentelemetry-aws/examples/: Cargo.toml  README.md
opentelemetry-aws/src/: lib.rs
opentelemetry-context/: CHANGELOG.md  Cargo.toml  README.md
opentelemetry-context/src/: lib.rs
opentelemetry-contrib/: CHANGELOG.md  Cargo.toml  README.md
opentelemetry-contrib/benches/: new_span.rs
opentelemetry-contrib/src/: lib.rs
opentelemetry-contrib/tests/: composite_propagator.rs
opentelemetry-datadog/: CHANGELOG.md  Cargo.toml  README.md
opentelemetry-datadog/examples/: README.md  datadog.rs
opentelemetry-datadog/src/: lib.rs
opentelemetry-declarative-config/: CHANGELOG.md  Cargo.toml  README.md
opentelemetry-declarative-config/examples/: declarative_basic.rs
opentelemetry-declarative-config/src/: lib.rs  logs.rs  metrics.rs  telemetry_config.rs
opentelemetry-declarative-config/tests/: configurator_tests.rs  extra_field.yaml  non_maintained_exporter.yaml  sample1.yaml  telemetry_config_tests.rs
opentelemetry-derive/: CHANGELOG.md  Cargo.toml  README.md
opentelemetry-derive/src/: lib.rs
opentelemetry-dynatrace/: CHANGELOG.md  Cargo.toml  README.md
opentelemetry-dynatrace/src/: lib.rs  metric.rs
opentelemetry-dynatrace/tests/: http_test.rs
opentelemetry-http/: CHANGELOG.md  Cargo.toml  README.md
opentelemetry-http/src/: lib.rs
opentelemetry-jaeger/: CHANGELOG.md  Cargo.toml  README.md
opentelemetry-jaeger-propagator/: CHANGELOG.md  Cargo.toml  README.md
opentelemetry-jaeger-propagator/src/: lib.rs  propagator.rs
opentelemetry-jaeger-propagator/tests/: docker-compose.yaml
opentelemetry-jaeger/src/: agent.rs  collector.rs  env.rs  lib.rs  uploader.rs
opentelemetry-jaeger/tests/: Dockerfile  docker-compose.yaml  integration_test.rs
opentelemetry-macros/: Cargo.toml
opentelemetry-macros/src/: lib.rs  metrics.rs
opentelemetry-otlp/: CHANGELOG.md  Cargo.toml  README.md  allowed-external-types.toml  build.rs
opentelemetry-otlp/benches/: logs_export.rs
opentelemetry-otlp/src/: lib.rs  log.rs  logs.rs  metric.rs  proto.rs  retry.rs  retry_classification.rs  span.rs
opentelemetry-otlp/tests/: grpc_build.rs  smoke.rs
opentelemetry-prometheus/: CHANGELOG.md  Cargo.toml  README.md  capture_outputs.rs
opentelemetry-prometheus/examples/: hyper.rs
opentelemetry-prometheus/src/: config.rs  exposition.rs  lib.rs  resource_selector.rs  sanitize.rs  utils.rs
opentelemetry-prometheus/tests/: exposition.rs  integration_test.rs
opentelemetry-sdk/: CHANGELOG.md  Cargo.toml  README.md  allowed-external-types.toml
opentelemetry-sdk/benches/: attribute_set.rs  batch_log_processor.rs  batch_span_processor.rs  bound_instruments.rs  context.rs  ddsketch.rs  growable_array.rs  hybrid_vec.rs  key_value_map.rs  log.rs  log_enabled.rs  log_exporter.rs  log_processor.rs  log_record_attribute_dedup.rs  metric.rs  metric_counter.rs  metric_gauge.rs  metric_histogram.rs  metrics_counter.rs  metrics_gauge.rs  metrics_hasher.rs  metrics_histogram.rs  noop_metrics.rs  sdk_disabled.rs  span.rs  span_builder.rs  span_processor_api.rs  trace.rs  tracer_creation.rs
opentelemetry-sdk/src/: error.rs  growable_array.rs  instrumentation.rs  lib.rs  retry.rs  runtime.rs  suppression.rs  thread_runtime.rs  util.rs
opentelemetry-sdk/tests/: metrics.rs  miri_smoke.rs
opentelemetry-semantic-conventions/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  generate-consts-from-spec.sh
opentelemetry-semantic-conventions/scripts/: generate-consts-from-spec.sh
opentelemetry-semantic-conventions/src/: attribute.rs  lib.rs  metric.rs  resource.rs  trace.rs
opentelemetry-stackdriver/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  build.rs  rustfmt.toml
opentelemetry-stackdriver/examples/: basic.rs
opentelemetry-stackdriver/src/: lib.rs  tokio_adapter.rs
opentelemetry-stackdriver/tests/: generate.rs
opentelemetry-stdout/: CHANGELOG.md  Cargo.toml  README.md
opentelemetry-stdout/examples/: basic-stdout.rs  basic.rs  logs_basics.rs  stdout-basic.rs
opentelemetry-stdout/src/: common.rs  lib.rs
opentelemetry-user-events-logs/: CHANGELOG.md  Cargo.toml  README.md
opentelemetry-user-events-logs/examples/: basic.rs
opentelemetry-user-events-logs/src/: lib.rs
opentelemetry-user-events-metrics/: CHANGELOG.md  Cargo.toml
opentelemetry-user-events-metrics/examples/: basic.rs
opentelemetry-user-events-metrics/src/: lib.rs
opentelemetry-userevents-exporter/: Cargo.toml  README.md
opentelemetry-userevents-exporter/examples/: basic.rs
opentelemetry-zipkin/: CHANGELOG.md  CODEOWNERS  Cargo.toml  README.md  allowed-external-types.toml
opentelemetry-zipkin/examples/: README.md  (+1 more)
opentelemetry-zpages/: CHANGELOG.md  Cargo.toml  DESIGN.md  README.md  build.rs
stress/: Cargo.toml  README.md
(+1085 files in other folders)
