[package]
name = "opentelemetry-api"
version = "1.0.0-beta.1"
edition = "2018"

[dependencies]
fnv = { version = "1.0", optional = true }
futures-channel = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["std", "sink"] }
lazy_static = "1.4"
pin-project = { version = "1.0.2", optional = true }
thiserror = "1"
tokio-stream = { version = "0.1", optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"

[features]
default = ["trace"]
trace = ["pin-project"]
metrics = ["fnv"]
testing = ["trace"]
