[package]
name = "opentelemetry-api"
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"
rust-version = "1.56"

[dependencies]
fnv = { version = "1.0", optional = true }
futures-channel = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["std", "sink"] }
indexmap = "1.8"
once_cell = "1.12.0"
pin-project-lite = { version = "0.2", optional = true }
thiserror = "1"
tokio-stream = { version = "0.1", optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"

[features]
default = ["trace"]
trace = ["pin-project-lite"]
metrics = ["fnv"]
testing = ["trace"]
