[package]
name = "opentelemetry_api"
version = "0.20.0"
description = "OpenTelemetry is a metrics collection and distributed tracing framework"
homepage = "https://github.com/open-telemetry/opentelemetry-rust"
repository = "https://github.com/open-telemetry/opentelemetry-rust"
readme = "README.md"
license = "Apache-2.0"
edition = "2021"
rust-version = "1.60"

[dependencies]
futures-channel = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["std", "sink"] }
indexmap = "1.8"
once_cell = "1.12.0"
pin-project-lite = { version = "0.2", optional = true }
thiserror = "1"
urlencoding = "2.1.2"

[target.'cfg(all(target_arch = "wasm32", not(target_os = "wasi")))'.dependencies]
js-sys = "0.3.63"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["trace"]
trace = ["pin-project-lite"]
metrics = []
testing = ["trace"]
logs = []
