[package]
name = "opentelemetry-appender-log"
version = "0.28.0"
description = "An OpenTelemetry appender for the log crate"
homepage = "https://github.com/open-telemetry/opentelemetry-rust/tree/main/opentelemetry-appender-log"
repository = "https://github.com/open-telemetry/opentelemetry-rust/tree/main/opentelemetry-appender-log"
readme = "README.md"
keywords = ["opentelemetry", "log", "logs"]
license = "Apache-2.0"
rust-version = "1.75.0"
edition = "2021"

[dependencies]
opentelemetry = { version = "0.28", path = "../opentelemetry", features = [
  "logs",
] }
log = { workspace = true, features = ["kv", "std"] }
serde = { workspace = true, optional = true, features = ["std"] }
opentelemetry-semantic-conventions = { version = "0.28", path = "../opentelemetry-semantic-conventions", optional = true, features = [
  "semconv_experimental",
] }

[features]
spec_unstable_logs_enabled = ["opentelemetry/spec_unstable_logs_enabled"]
with-serde = ["log/kv_serde", "serde"]
experimental_metadata_attributes = ["dep:opentelemetry-semantic-conventions"]

[dev-dependencies]
opentelemetry_sdk = { path = "../opentelemetry-sdk", features = [
  "testing",
  "spec_unstable_logs_enabled",
] }
opentelemetry-stdout = { path = "../opentelemetry-stdout", features = ["logs"] }
log = { workspace = true, features = ["kv_serde"] }
tokio = { workspace = true }
serde = { workspace = true, features = ["std", "derive"] }
