[package]
name = "opentelemetry-appender-tracing"
version = "0.31.1"
edition = "2021"
description = "An OpenTelemetry log appender for the tracing crate"
homepage = "https://github.com/open-telemetry/opentelemetry-rust/tree/main/opentelemetry-appender-tracing"
repository = "https://github.com/open-telemetry/opentelemetry-rust/tree/main/opentelemetry-appender-tracing"
readme = "README.md"
keywords = ["opentelemetry", "log", "logs", "tracing"]
license = "Apache-2.0"
rust-version = "1.75.0"
autobenches = false

[dependencies]
log = { workspace = true, optional = true }
opentelemetry = { workspace = true, features = ["logs"] }
tracing = { workspace = true, features = ["std"]}
tracing-core = { workspace = true }
tracing-log = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, features = ["registry", "std"] }

[dev-dependencies]
log = { workspace = true }
opentelemetry-stdout = { workspace = true, features = ["logs"] }
opentelemetry_sdk = { workspace = true, features = ["logs", "testing", "internal-logs"] }
tracing = { workspace = true, features = ["std"]}
tracing-subscriber = { workspace = true, features = ["env-filter","registry", "std", "fmt"] }
tracing-log = { workspace = true }
criterion = { workspace = true }

[target.'cfg(not(target_os = "windows"))'.dev-dependencies]
pprof = { workspace = true }

[features]
default = []
experimental_metadata_attributes = ["dep:tracing-log"]
spec_unstable_logs_enabled = ["opentelemetry/spec_unstable_logs_enabled"]
bench_profiling = []

[[bench]]
name = "logs"
harness = false
required-features = ["spec_unstable_logs_enabled"]

[[bench]]
name = "log-attributes"
harness = false

[lib]
bench = false

[lints]
workspace = true
