[package]
name = "opentelemetry-aws"
version = "0.5.0"
description = "AWS exporters and propagators for OpenTelemetry"
homepage = "https://github.com/open-telemetry/opentelemetry-rust/tree/main/opentelemetry-aws"
repository = "https://github.com/open-telemetry/opentelemetry-rust/tree/main/opentelemetry-aws"
readme = "README.md"
categories = [
    "development-tools::debugging",
    "development-tools::profiling",
]
keywords = ["opentelemetry", "tracing"]
license = "Apache-2.0"
edition = "2018"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["trace"]
trace = ["opentelemetry/trace"]

[dependencies]
opentelemetry = { version = "0.17", path = "../opentelemetry", features = ["trace"] }
lazy_static = "1.4"

[dev-dependencies]
opentelemetry = { path = "../opentelemetry", features = ["trace", "testing"] }
opentelemetry-http = { path = "../opentelemetry-http" }
hyper = { version = "0.14" }
tokio = { version = "1.0", features = ["macros", "rt"] }
