[package]
name = "opentelemetry-aws"
version = "0.7.0"
description = "AWS exporters and propagators for OpenTelemetry"
homepage = "https://github.com/open-telemetry/opentelemetry-rust/tree/main/opentelemetry-aws"
repository = "https://github.com/open-telemetry/opentelemetry-rust/tree/main/opentelemetry-aws"
readme = "README.md"
categories = [
    "development-tools::debugging",
    "development-tools::profiling",
]
keywords = ["opentelemetry", "tracing"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.60"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["trace"]
trace = ["opentelemetry_api/trace"]

[dependencies]
once_cell = "1.12"
opentelemetry_api = { version = "0.19", path = "../opentelemetry-api" }

[dev-dependencies]
opentelemetry_api = { path = "../opentelemetry-api", features = ["trace"] }
opentelemetry_sdk = { path = "../opentelemetry-sdk", features = ["trace", "testing"] }
opentelemetry-http = { path = "../opentelemetry-http" }
opentelemetry-stdout = { path = "../opentelemetry-stdout", features = ["trace"] }
hyper = { version = "0.14" }
tokio = { version = "1.0", features = ["macros", "rt"] }
