[package]
name = "opentelemetry-contrib"
version = "0.9.0"
description = "Rust contrib repo for OpenTelemetry"
homepage = "https://github.com/open-telemetry/opentelemetry-rust/tree/main/opentelemetry-contrib"
repository = "https://github.com/open-telemetry/opentelemetry-rust/tree/main/opentelemetry-contrib"
readme = "README.md"
categories = [
    "development-tools::debugging",
    "development-tools::profiling",
]
keywords = ["opentelemetry", "tracing"]
license = "Apache-2.0"
edition = "2018"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
base64_format = ["base64", "binary_propagator"]
binary_propagator = []

[dependencies]
opentelemetry = { version = "0.17", path = "../opentelemetry", features = ["trace"] }
base64 = { version = "0.13", optional = true }
lazy_static = "1.4"

[dev-dependencies]
base64 = "0.13"
opentelemetry = { path = "../opentelemetry", features = ["trace", "testing"] }
