[package]
name = "opentelemetry-contrib"
version = "0.13.0"
description = "Rust contrib repo for OpenTelemetry"
homepage = "https://github.com/open-telemetry/opentelemetry-rust/tree/main/opentelemetry-contrib"
repository = "https://github.com/open-telemetry/opentelemetry-rust/tree/main/opentelemetry-contrib"
readme = "README.md"
categories = [
    "development-tools::debugging",
    "development-tools::profiling",
]
keywords = ["opentelemetry", "tracing"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.65"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
api = []
default = []
base64_format = ["base64", "binary_propagator"]
binary_propagator = []
jaeger_json_exporter = ["serde_json", "futures-core", "futures-util", "async-trait", "opentelemetry-semantic-conventions"]
rt-tokio = ["tokio", "opentelemetry_sdk/rt-tokio"]
rt-tokio-current-thread = ["tokio", "opentelemetry_sdk/rt-tokio-current-thread"]
rt-async-std = ["async-std", "opentelemetry_sdk/rt-async-std"]

[dependencies]
async-std = { version = "1.10", optional = true }
async-trait = { version = "0.1", optional = true }
base64 = { version = "0.13", optional = true }
futures-core = { version = "0.3", optional = true }
futures-util = { version = "0.3", optional = true, default-features = false }
once_cell = "1.17.1"
opentelemetry = { version = "0.21", path = "../opentelemetry" }
opentelemetry_sdk = { version = "0.21", optional = true, path = "../opentelemetry-sdk" }
opentelemetry-semantic-conventions = { version = "0.13", optional = true, path = "../opentelemetry-semantic-conventions" }
serde_json = { version = "1", optional = true }
tokio = { version = "1.0", features = ["fs", "io-util"], optional = true }

[dev-dependencies]
base64 = "0.13"
criterion = { version = "0.5", features = ["html_reports"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
opentelemetry_sdk = { path = "../opentelemetry-sdk", features = ["trace", "testing"] }
[target.'cfg(not(target_os = "windows"))'.dev-dependencies]
pprof = { version = "0.13", features = ["flamegraph", "criterion"] }

[[bench]]
name = "new_span"
harness = false
required-features = ["api"]
