[package]
name = "opentelemetry-datadog"
version = "0.5.0"
description = "Datadog exporters and propagators for OpenTelemetry"
homepage = "https://github.com/open-telemetry/opentelemetry-rust/tree/main/opentelemetry-datadog"
repository = "https://github.com/open-telemetry/opentelemetry-rust/tree/main/opentelemetry-datadog"
readme = "README.md"
categories = [
    "development-tools::debugging",
    "development-tools::profiling",
]
keywords = ["opentelemetry", "tracing"]
license = "Apache-2.0"
edition = "2018"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
reqwest-blocking-client = ["reqwest/blocking", "opentelemetry-http/reqwest"]
reqwest-client = ["reqwest", "opentelemetry-http/reqwest"]
surf-client = ["surf", "opentelemetry-http/surf"]

[dependencies]
async-trait = "0.1"
indexmap = "1.6"
opentelemetry = { version = "0.17", path = "../opentelemetry", features = ["trace"] }
opentelemetry-http = { version = "0.6", path = "../opentelemetry-http" }
opentelemetry-semantic-conventions = { version = "0.9", path = "../opentelemetry-semantic-conventions" }
rmp = "0.8"
reqwest = { version = "0.11", default-features = false, optional = true }
surf = { version = "2.0", default-features = false, optional = true }
thiserror = "1.0"
itertools = "0.10"
http = "0.2"
lazy_static = "1.4"

[dev-dependencies]
base64 = "0.13"
bytes = "1"
futures-util = { version = "0.3", features = ["io"] }
isahc = "1.4"
opentelemetry = { path = "../opentelemetry", features = ["trace", "testing"] }
