[package]
name = "opentelemetry-datadog"
version = "0.8.0"
description = "Datadog exporters and propagators for OpenTelemetry"
homepage = "https://github.com/open-telemetry/opentelemetry-rust/tree/main/opentelemetry-datadog"
repository = "https://github.com/open-telemetry/opentelemetry-rust/tree/main/opentelemetry-datadog"
readme = "README.md"
categories = [
    "development-tools::debugging",
    "development-tools::profiling",
]
keywords = ["opentelemetry", "tracing"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.64"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
reqwest-blocking-client = ["reqwest/blocking", "opentelemetry-http/reqwest"]
reqwest-client = ["reqwest", "opentelemetry-http/reqwest"]
surf-client = ["surf", "opentelemetry-http/surf"]

[dependencies]
indexmap = "2.0"
once_cell = "1.12"
opentelemetry = { version = "0.21", path = "../opentelemetry", features = ["trace"] }
opentelemetry_sdk = { version = "0.20", path = "../opentelemetry-sdk", features = ["trace"] }
opentelemetry-http = { version = "0.9", path = "../opentelemetry-http" }
opentelemetry-semantic-conventions = { version = "0.12", path = "../opentelemetry-semantic-conventions" }
rmp = "0.8"
url = "2.2"
reqwest = { version = "0.11", default-features = false, optional = true }
surf = { version = "2.0", default-features = false, optional = true }
thiserror = "1.0"
itertools = "0.11"
http = "0.2"
futures-core = "0.3"

[dev-dependencies]
async-trait = "0.1"
base64 = "0.13"
bytes = "1"
futures-util = { version = "0.3", default-features = false, features = ["io"] }
isahc = "1.4"
opentelemetry_sdk = { path = "../opentelemetry-sdk", features = ["trace", "testing"] }

[[example]]
name = "datadog"
path = "examples/datadog.rs"
